--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
   </head>
   <body>
     <h1>Tim Gant</h1>
+    <h2>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut
+      vitae provident nihil inventore, beatae perferendis modi molestiae
+      aperiam! Rerum quae velit, quam expedita et doloribus modi libero maxime
+      blanditiis?
+    </h2>
   </body>
 </html>
