--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       vitae provident nihil inventore, beatae perferendis modi molestiae
       aperiam! Rerum quae velit, quam expedita et doloribus modi libero maxime
       blanditiis?
+      <img
+        src="https://photos.google.com/search/_cAF1QipOdHsYW8RNnOAlkX3tGUr8dG5YMEp72tr8_Tim%20Gant/photo/AF1QipO84u7WqmJLKx38iAh0RPl6F5ttA4RF6a3FZlmT"
+        alt="Tim"
+      />
     </h2>
   </body>
 </html>
