Lots relocated picture file, added fav icon

--- a/index.html
+++ b/index.html
@@ -4,19 +4,50 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+
+    <title>P. Colin Manikoth</title>
+
+    <!-- Favicons -->
+
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/favicons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/favicons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/favicons/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="/favicons/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <meta name="msapplication-TileColor" content="#010101" />
+    <meta name="theme-color" content="#ffffff" />
+
+    <link
+      rel="stylesheet"
+      href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
+    />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
     <h1>Tim Gant</h1>
-    <h2>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut
-      vitae provident nihil inventore, beatae perferendis modi molestiae
-      aperiam! Rerum quae velit, quam expedita et doloribus modi libero maxime
-      blanditiis?
-    </h2>
-    <img
-      src="https://lh3.googleusercontent.com/-oKDSNFo5yPeXy9ZsnP36hmVuX0G659LrnUS38JstNOw3ld9acJ9Cyzqet4J9v-5NIe3_PiasJeLzfZbv0EkeKQ-AyZZIXLCDH6ly_l3NgpWRVpHCdsBKGamDERN_usLwwoa_SEptzc3nQRaqHN7nQ_WcJFns1YXORmZ0QJGj8WWINOAKCqt2JFdcsD1CWSZaeeCoPJO74SizhWpI4zW-48CcVYBcZ1LMd18mCPRmFmBgipl7WvS57GRIJTTq-VOOxbgxVud5Fd5bZvuJ52qU4ag8SoHS1OVGj3uc-ynovRZRLbgZzR5nvBH1hkmd9ooxHERzmvBjCc_1KzH1_CV_bjkzhN4zwMMiESAQLipcMArjBAsB2cxzJBowd-bYlcrbD34p3J62xBKsS_dklUa4Vg-PDKm1jRBxdTw7V-UcRFBQM9KD-5yGNm48Q7asnvihga_SBaYOYs4H3c8TTQdD6rFHKIMq63Ftu_mWqv549qoMAvHMX78KuX4L5x32ej4kEeRIZwzfHPpK468pk9utz7wTo2A54O84uNhgkbuyWq3StOg44m0Csm1Hd50spaNEGvXY2_gh0OFs-vMU-TEAlZ069GsQ_fJstpYpFBmkhsCm6SGyumtYUyYNDwnefuDbGRkwp12tcix71N2uGNyq-GXUjGqqMFvvnln6IuF0go4xm11fi_GOpe38EYHYx8=w584-h730-no?authuser=0"
-      alt="Tim"
-    />
+
+    <img src="/img/me.jpg" alt="P. Colin Manikoth" />
+
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis omnis
+      obcaecati quibusdam ex perspiciatis saepe recusandae aut labore sunt?
+      Libero illum praesentium accusantium est deleniti nam animi omnis
+      explicabo ducimus.
+    </p>
+
+    <script src="/js/scripts.js"></script>
   </body>
 </html>
