--- a/index.html
+++ b/index.html
@@ -42,10 +42,8 @@
     <img src="/img/me.jpg" alt="P. Colin Manikoth" />
 
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis omnis
-      obcaecati quibusdam ex perspiciatis saepe recusandae aut labore sunt?
-      Libero illum praesentium accusantium est deleniti nam animi omnis
-      explicabo ducimus.
+      This is Tim, he's 24, a senior at EWU and a all around weird guy. But in
+      the enjoyable funny sort of way, not the bad wierd
     </p>
 
     <script src="/js/scripts.js"></script>
