--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <img src="/img/me.jpg" alt="P. Colin Manikoth" />
 
     <p>
-      This is Tim, he's 24, a senior at EWU and a all around weird guy. But in
+      This is Tim, he's 24, a senior at EWU and an all around weird guy. But in
       the enjoyable funny sort of way, not the bad wierd
     </p>
 
