--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>P. Colin Manikoth</title>
+    <title>Tim gant</title>
 
     <!-- Favicons -->
 
