--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <title>Tim gant</title>
+    <!--fonts-->
+    <link fnt="/fonts/Thunderstorm.ttf" />
 
     <!-- Favicons -->
 
@@ -39,7 +41,7 @@
   <body>
     <h1>Tim Gant</h1>
 
-    <img src="/img/me.jpg" alt="P. Colin Manikoth" />
+    <img src="/img/me.jpg" alt="Tim Gant" />
 
     <p>
       This is Tim, he's 24, a senior at EWU and an all around weird guy. But in
