--- a/index.html
+++ b/index.html
@@ -54,7 +54,12 @@
       the enjoyable funny sort of way, not the bad wierd
     </p>
     <h2>
-      <form name="contact" method="POST" data-netlify="true">
+      <form
+        name="contact"
+        method="POST"
+        data-netlify="true"
+        action="/thanks.html"
+      >
         <p>
           <label>Your Name: <input type="text" name="name" /></label>
         </p>
