--- a/thanks.html
+++ b/thanks.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Thank You!</title>
+    <title>Thanks Buddy</title>
   </head>
-  <body>
-    <h1>Thanks Buddy</h1>
-  </body>
+  <body></body>
 </html>
