--- a/404.html
+++ b/404.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Thank You!</title>
+    <title>404</title>
   </head>
   <body>
-    <p>🙏 <a href="/">Go to Homepage</a></p>
+    <img
+      src="https://media.giphy.com/media/Ta3v3I4GI1gH7Rqek6/giphy.gif"
+      alt="404"
+    />
+
+    <p><a href="/">Back to Website</a></p>
   </body>
 </html>
