worked on light gallery

--- a/index.html
+++ b/index.html
@@ -53,6 +53,32 @@
       This is Tim, he's 24, a senior at EWU and an all around weird guy. But in
       the enjoyable funny sort of way, not the bad wierd
     </p>
+  </section>
+
+  <!-- Portfolio -->
+  <section>
+    <div id="portfolioGallery">
+      <a href="/img/Michael Dolphins.png">
+        <img src="/img/Michael Dolphins.png" alt="Michael Dolphins">
+      </a>
+      <a href="/img/gomeg sticker.png">
+        <img src="/img/gomeg sticker.png" alt="Placeholder">
+      </a>
+      <a href="https://picsum.photos/1080">
+        <img src="https://picsum.photos/1080" alt="Placeholder">
+      </a>
+      <a href="https://picsum.photos/1080">
+        <img src="https://picsum.photos/1080" alt="Placeholder">
+      </a>
+      <a href="https://picsum.photos/1080">
+        <img src="https://picsum.photos/1080" alt="Placeholder">
+      </a>
+      <a href="https://picsum.photos/1080">
+        <img src="https://picsum.photos/1080" alt="Placeholder">
+      </a>
+    </div>
+  </section>
+
     <h2>
       <form
         name="contact"
@@ -76,5 +102,17 @@
       </form>
     </h2>
     <script src="/js/scripts.js"></script>
+
+  <!-- Light Gallery -->
+  <script src="https://cdn.rawgit.com/sachinchoolur/lightgallery.js/master/dist/js/lightgallery.js"></script>
+
+  <script type="text/javascript">
+    lightGallery(document.getElementById('portfolioGallery'));
+  </script>
+    <script src="/js/scripts.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.rawgit.com/sachinchoolur/lightgallery.js/master/dist/css/lightgallery.css"
+    />
   </body>
 </html>
