light gallery update

--- a/index.html
+++ b/index.html
@@ -61,20 +61,20 @@
       <a href="/img/Michael Dolphins.png">
         <img src="/img/Michael Dolphins.png" alt="Michael Dolphins">
       </a>
-      <a href="/img/gomeg sticker.png">
-        <img src="/img/gomeg sticker.png" alt="Placeholder">
+      <a href="/img/crusaid.png">
+        <img src="/img/crusaid.png" alt="Placeholder">
       </a>
-      <a href="https://picsum.photos/1080">
-        <img src="https://picsum.photos/1080" alt="Placeholder">
+      <a href="/img/ChiquitaCharlie.jpg">
+        <img src="/img/ChiquitaCharlie.jpg"" alt="Placeholder">
       </a>
-      <a href="https://picsum.photos/1080">
-        <img src="https://picsum.photos/1080" alt="Placeholder">
+      <a href="/img/old klondike - Copy.png">
+        <img src="/img/old klondike - Copy.png" alt="Placeholder">
       </a>
-      <a href="https://picsum.photos/1080">
-        <img src="https://picsum.photos/1080" alt="Placeholder">
+      <a href="/img/Gant_Tim_bookcover.png">
+        <img src="/img/Gant_Tim_bookcover.png" alt="Placeholder">
       </a>
-      <a href="https://picsum.photos/1080">
-        <img src="https://picsum.photos/1080" alt="Placeholder">
+      <a href="/img/family tree.png">
+        <img src="img/family tree.png" alt="Placeholder">
       </a>
     </div>
   </section>
