--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
   <body>
     <h1>Tim Gant</h1>
 
-    <img src="/img/me.jpg" alt="Tim Gant" />
+    <img src="/img/me2.JPG" alt="Tim Gant" />
 
-    <p>
-      This is Tim, he's 24, a senior at EWU and an all around weird guy. But in
-      the enjoyable funny sort of way, not the bad wierd
-    </p>
+    <h3>
+      This is Tim, he's 24. He's also a senior at EWU majoring in visual communication and desigm, with a certificate in UX/UI  </h3>
   </section>
 
   <!-- Portfolio -->
   <section>
+    
+    <h1>portfolio</h1>
     <div id="portfolioGallery">
       <a href="/img/Michael Dolphins.png">
         <img src="/img/Michael Dolphins.png" alt="Michael Dolphins">
@@ -70,8 +70,8 @@
       <a href="/img/old klondike - Copy.png">
         <img src="/img/old klondike - Copy.png" alt="Placeholder">
       </a>
-      <a href="/img/Gant_Tim_bookcover.png">
-        <img src="/img/Gant_Tim_bookcover.png" alt="Placeholder">
+      <a href="/img/even higher quality.png">
+        <img src="/img/even higher quality.png" alt="Placeholder">
       </a>
       <a href="/img/family tree.png">
         <img src="img/family tree.png" alt="Placeholder">
