--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Tim gant</title>
+    <title>A Sack full of Potatos</title>
     <!--fonts-->
     <link fnt="/fonts/Thunderstorm.ttf" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
