--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
     <img src="/img/me2.JPG" alt="Tim Gant" />
 
     <h3>
-      This is Tim, he's 24. He's also a senior at EWU majoring in visual communication and desigm, with a certificate in UX/UI  </h3>
+      This is Tim, he's 24. He's also a senior at EWU majoring in visual communication and desigm, with a certificate in UX/UI. This website which he designed from scratch serves as his portfolio. Feel free to get a hold of him, by which I mean me.</h3>
+      
   </section>
 
   <!-- Portfolio -->
@@ -75,7 +76,35 @@
       </a>
       <a href="/img/family tree.png">
         <img src="img/family tree.png" alt="Placeholder">
+      <a href="/img/Gant_Tim_bookcover.png">
+          <img src="img/Gant_Tim_bookcover.png" alt="Placeholder">
+
+      <a href="/img/Rancid_Ketchup.png">
+        <img src="img/Rancid_Ketchup.png" alt="Placeholder">
       </a>
+      <a href="/img/timlins.jpg">
+        <img src="img/timlins.jpg" alt="Placeholder">
+      </a>
+      <a href="/img/RLT.jpg">
+        <img src="img/RLT.jpg" alt="Placeholder">
+      </a>
+      <a href="/img/col.jpg">
+        <img src="img/col.jpg" alt="Placeholder">
+      </a>
+      <a href="/img/X-Wing.png">
+        <img src="img/X-Wing.png" alt="Placeholder">
+      </a>
+      <a href="/img/poster.jpg">
+        <img src="img/poster.jpg" alt="Placeholder">
+      </a>
+     
+      <a href="/img/wp.jpg">
+        <img src="img/wp.jpg" alt="Placeholder">
+      </a>
+      <a href="/img/Idahobos.jpg">
+        <img src="img/Idahobos.jpg" alt="Placeholder">
+      </a>
+
     </div>
   </section>
 
