--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
       <a href="/img/Idahobos.jpg">
         <img src="img/Idahobos.jpg" alt="Placeholder">
       </a>
+      <a href="/img/ig.jpg">
+        <img src="img/ig.jpg" alt="Placeholder">
+      </a>
       <a href="/img/pyr.jpg">
         <img src="img/pyr.jpg" alt="Placeholder">
       </a>
@@ -114,6 +117,15 @@
       </a>
       <a href="/img/h1.jpg">
         <img src="img/h1.jpg" alt="Placeholder">
+      </a>
+      <a href="/img/moon.jpg">
+        <img src="img/moon.jpg" alt="Placeholder">
+      </a>
+      <a href="/img/lake.jpg">
+        <img src="img/lake.jpg" alt="Placeholder">
+      </a>
+      <a href="/img/le.jpg">
+        <img src="img/le.jpg" alt="Placeholder">
       </a>
     </div>
   </section>
