--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <img src="/img/me2.JPG" alt="Tim Gant" />
 
     <h3>
-      This is Tim, he's 24. He's also a senior at EWU majoring in visual communication and desigm, with a certificate in UX/UI. This website which he designed from scratch serves as his portfolio. When it comes to works produced he's a jack of all trades. From physical drawing,web design, photography,to digital art, he does it all.   Feel free to get a hold of him, by him I mean me.</h3>
+      This is Tim, he's 24. He's also a senior at EWU majoring in visual communication and design, with a certificate in UX/UI. This website which he designed from scratch serves as his portfolio. When it comes to works produced he's a jack of all trades. From physical drawing,web design, photography,to digital art, he does it all.   Feel free to get a hold of him, by him I mean me.</h3>
       
   </section>
 
