--- a/index.html
+++ b/index.html
@@ -127,6 +127,15 @@
       <a href="/img/le.jpg">
         <img src="img/le.jpg" alt="Placeholder">
       </a>
+      <a href="/img/The velociraptor returns.jpg">
+        <img src="img/The velociraptor returns.jpg" alt="Placeholder">
+      </a>
+      <a href="/img/shark helicopters and snaildrones.jpg">
+        <img src="img/shark helicopters and snaildrones.jpg" alt="Placeholder">
+      </a>
+      <a href="/img/lawnmower mafia.jpg">
+        <img src="img/lawnmower mafia.jpg" alt="Placeholder">
+      </a>
     </div>
   </section>
 
