--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <img src="/img/me2.JPG" alt="Tim Gant" />
 
     <h3>
-      This is Tim, he's 24. He's also a senior at EWU majoring in visual communication and design, with a certificate in UX/UI. This website which he designed from scratch serves as his portfolio. When it comes to works produced he's a jack of all trades. From physical drawing,web design, photography,to digital art, he does it all.   Feel free to get a hold of him, by him I mean me.</h3>
+      Hello my name is Tim. I'm a senior at EWU majoring in visual communication and design, with a certification in UX/UI. This website which I built and designed from scratch serves as my portfolio. When it comes to works produced I'm a jack of all trades. From physical drawings, web design, photography, to digital art, I do it all. Feel free to get a hold of me.</h3>
       
   </section>
 
@@ -138,7 +138,14 @@
       </a>
     </div>
   </section>
-
+  <section>
+    <h1>User Experience Design</h1>
+    <a href="https://www.figma.com/file/zZTbaDAbW7uw36FTTcDqM2/Hifi-Design?node-id=0%3A1">Student planner redesign</a>
+    <a href =" https://www.figma.com/file/D2obfCrqG4lHJi541OqKbO/Proj-2-Style-Tile-Hi-Fi">Driving assistant app</a>
+    <a href= "https://www.figma.com/proto/nXllU0QkK77AVL9Kywio7A/Project-3:-Hot-Drink-Dispenser?node-id=51%3A72&scaling=min-zoom"> Coffee Dispenser Design</a>
+    <a href ="https://www.figma.com/proto/eNwIkqJy0hYZFp70whnLEb/Project-4?node-id=13%3A94&scaling=min-zoom"> Nostalgia system
+    <a href = "https://www.figma.com/file/eNwIkqJy0hYZFp70whnLEb/Project-4?node-id=0%3A1"> Nostalgia system process
+  </section>
     <h2>
       <form
         name="contact"
