--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
     <a href="https://www.figma.com/file/zZTbaDAbW7uw36FTTcDqM2/Hifi-Design?node-id=0%3A1">Student planner redesign</a>
     <a href =" https://www.figma.com/file/D2obfCrqG4lHJi541OqKbO/Proj-2-Style-Tile-Hi-Fi">Driving assistant app</a>
     <a href= "https://www.figma.com/proto/nXllU0QkK77AVL9Kywio7A/Project-3:-Hot-Drink-Dispenser?node-id=51%3A72&scaling=min-zoom"> Coffee Dispenser Design</a>
-    <a href ="https://www.figma.com/proto/eNwIkqJy0hYZFp70whnLEb/Project-4?node-id=13%3A94&scaling=min-zoom"> Nostalgia system
-    <a href = "https://www.figma.com/file/eNwIkqJy0hYZFp70whnLEb/Project-4?node-id=0%3A1"> Nostalgia system process
+    <a href ="https://www.figma.com/proto/eNwIkqJy0hYZFp70whnLEb/Project-4?node-id=13%3A94&scaling=min-zoom"> Nostalgia system</a>
+    <a href = "https://www.figma.com/file/eNwIkqJy0hYZFp70whnLEb/Project-4?node-id=0%3A1"> Nostalgia system process</a>
   </section>
   <h1>Contact me</h1>
     <h2>
