--- a/index.html
+++ b/index.html
@@ -136,6 +136,9 @@
       <a href="/img/lawnmower mafia.jpg">
         <img src="img/lawnmower mafia.jpg" alt="Placeholder">
       </a>
+      <a href="/img/hickory air-01.jpg">
+        <img src="img/hickory air-01.jpg" alt="Placeholder">
+      </a>
     </div>
   </section>
   <section>
