--- a/index.html
+++ b/index.html
@@ -150,6 +150,16 @@
     <a href ="https://www.figma.com/proto/eNwIkqJy0hYZFp70whnLEb/Project-4?node-id=13%3A94&scaling=min-zoom"> Nostalgia system Design</a>
     <a href = "https://www.figma.com/file/eNwIkqJy0hYZFp70whnLEb/Project-4?node-id=0%3A1"> Nostalgia system creative process</a>
   </section>
+  <section>
+    <h1>Web Design Work</h1>
+    <a href=" https://qgx4h.csb.app/"> Cheetos University Contest Collaboration</a>
+    <a href ="https://llwuq.csb.app/"> Weather Web App</a>
+    <a href="https://3g2he.csb.app/"> Soundboard Web App</a>
+    <h4>This website is also designed by me</h4>
+
+
+
+  </section>
   <h1>Contact me</h1>
     <h2>
       <form
