--- a/index.html
+++ b/index.html
@@ -139,6 +139,10 @@
       <a href="/img/hickory air-01.jpg">
         <img src="img/hickory air-01.jpg" alt="Placeholder">
       </a>
+      <a href="/img/flyer1.jpg">
+        <img src="img/flyer1.jpg" alt="Placeholder">
+      </a>
+      
     </div>
   </section>
   <section>
