fixed one thing

--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
     <a href=" https://qgx4h.csb.app/"> Cheetos University Contest Collaboration</a>
     <a href ="https://llwuq.csb.app/"> Weather Web App</a>
     <a href="https://3g2he.csb.app/"> Soundboard Web App</a>
-    <a href="https://www.icaauction.com/">Auction Content Manager
-    <h4>This website is also designed by me</h4>
+    <a href="https://www.icaauction.com/">Auction Content Manager</a>
+    <h4>This website was also designed and built by me</h4>
 
 
 
