--- a/index.html
+++ b/index.html
@@ -58,6 +58,19 @@
   <section>
     
     <h1>Portfolio</h1>
+    <h2> photography<h2>
+        <a href="/img/h1.jpg">
+          <img src="img/h1.jpg" alt="Placeholder">
+        </a>
+        <a href="/img/moon.jpg">
+          <img src="img/moon.jpg" alt="Placeholder">
+        </a>
+        <a href="/img/lake.jpg">
+          <img src="img/lake.jpg" alt="Placeholder">
+        </a>
+        <a href="/img/le.jpg">
+          <img src="img/le.jpg" alt="Placeholder">
+        </a>
     <div id="portfolioGallery">
       <a href="/img/Michael Dolphins.png">
         <img src="/img/Michael Dolphins.png" alt="Michael Dolphins">
@@ -114,18 +127,6 @@
       </a>
       <a href="/img/sad.jpg">
         <img src="img/sad.jpg" alt="Placeholder">
-      </a>
-      <a href="/img/h1.jpg">
-        <img src="img/h1.jpg" alt="Placeholder">
-      </a>
-      <a href="/img/moon.jpg">
-        <img src="img/moon.jpg" alt="Placeholder">
-      </a>
-      <a href="/img/lake.jpg">
-        <img src="img/lake.jpg" alt="Placeholder">
-      </a>
-      <a href="/img/le.jpg">
-        <img src="img/le.jpg" alt="Placeholder">
       </a>
       <a href="/img/The velociraptor returns.jpg">
         <img src="img/The velociraptor returns.jpg" alt="Placeholder">
