--- a/index.html
+++ b/index.html
@@ -73,23 +73,24 @@
           <a href="/img/le.jpg">
             <img src="img/le.jpg" alt="Placeholder">
           </a>
-      <a href="/img/Michael Dolphins.png">
-        <img src="/img/Michael Dolphins.png" alt="Michael Dolphins">
-      </a>
-      <a href="/img/crusaid.png">
-        <img src="/img/crusaid.png" alt="Placeholder">
-      </a>
-      <a href="/img/ChiquitaCharlie.jpg">
-        <img src="/img/ChiquitaCharlie.jpg"" alt="Placeholder">
-      </a>
-      <a href="/img/old klondike - Copy.png">
-        <img src="/img/old klondike - Copy.png" alt="Placeholder">
-      </a>
-      <a href="/img/even higher quality.png">
-        <img src="/img/even higher quality.png" alt="Placeholder">
-      </a>
-      <a href="/img/family tree.png">
-        <img src="img/family tree.png" alt="Placeholder">
+          <h2>digital work</h2>
+          <a href="/img/Michael Dolphins.png">
+            <img src="/img/Michael Dolphins.png" alt="Michael Dolphins">
+          </a>
+          <a href="/img/crusaid.png">
+            <img src="/img/crusaid.png" alt="Placeholder">
+          </a>
+          <a href="/img/ChiquitaCharlie.jpg">
+            <img src="/img/ChiquitaCharlie.jpg"" alt="Placeholder">
+          </a>
+          <a href="/img/old klondike - Copy.png">
+            <img src="/img/old klondike - Copy.png" alt="Placeholder">
+          </a>
+          <a href="/img/even higher quality.png">
+            <img src="/img/even higher quality.png" alt="Placeholder">
+          </a>
+          <a href="/img/family tree.png">
+            <img src="img/family tree.png" alt="Placeholder">
      
       <a href="/img/appFood.jpg">
             <img src="img/appFood.jpg" alt="Placeholder">
