--- a/index.html
+++ b/index.html
@@ -43,11 +43,10 @@
     />
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
-
-  <body>
+    <body>
     <h1>Tim Gant</h1>
 
-    <img src="/img/me2.JPG" alt="Tim Gant" />
+    <img src= "/img/Tim.jpg" alt= "Tim" />
 
     <h3>
       Hello my name is Tim. I'm a senior at EWU majoring in visual communication and design, with a certification in UX/UI. This website which I built and designed from scratch serves as my portfolio. When it comes to works produced I'm a jack of all trades. From physical drawings, web design, photography, to digital art, I do it all. Feel free to get a hold of me.</h3>
