--- a/index.html
+++ b/index.html
@@ -139,6 +139,8 @@
       </a>
       <a href="/img/ts.jpg">
         <img src="img/ts.jpg" alt="Placeholder">
+      <a href= "/img/beach.JPG">
+        <img src="img/beach.jpg" alt="Placeholder">
       </a>
       
       
