--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
     
     <div id="portfolioGallery">
       <h2> photography<h2>
+          <a href="https://www.instagram.com/tims_snapshots/?hl=en">Photography Insatagram Account</a>
+
           <a href="/img/h1.jpg">
             <img src="img/h1.jpg" alt="Placeholder">
           </a>
