added more links

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     
     <div id="portfolioGallery">
       <h2> photography<h2>
-          <a href="https://www.instagram.com/tims_snapshots/?hl=en"><h2>Photography Insatagram Account</h2></a>
+          
 
           <a href="/img/h1.jpg">
             <img src="img/h1.jpg" alt="Placeholder">
@@ -164,7 +164,16 @@
     <a href="https://3g2he.csb.app/"> Soundboard Web App</a>
     <a href="https://www.icaauction.com/">Auction Content Manager</a>
     <h4>This website was also designed and built by me</h4>
+    <section>
+        <h1>Places you can find me</h1>
+        <a href = "https://www.instagram.com/tims_snapshots/?hl=en"> Instagram photography account</a>
+        <a href = "https://github.com/Timoski-Gantovich">Github</a>
+        <a href = "https://www.linkedin.com/in/tim-gant-a5933b138/">LinkedIn</a>
 
+
+
+      </section>
+      <section>
 
 
   </section>
