--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
     <h4>This website was also designed and built by me</h4>
     <section>
         <h1>Places you can find me</h1>
-        <a href = "https://www.instagram.com/tims_snapshots/?hl=en"> Instagram photography account</a>
-        <a href = "https://github.com/Timoski-Gantovich">Github</a>
-        <a href = "https://www.linkedin.com/in/tim-gant-a5933b138/">LinkedIn</a>
+        <a href = "https://www.instagram.com/tims_snapshots/?hl=en"> Instagram </a>
+        <a href = "https://github.com/Timoski-Gantovich">Github </a>
+        <a href = "https://www.linkedin.com/in/tim-gant-a5933b138/">LinkedIn </a>
 
 
 
