--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
     
     <div id="portfolioGallery">
       <h2> photography<h2>
-          
-
+          <a href="/img/Tstorm.jpg">
+            <img src="img/Tstorm.jpg" alt="Placeholder">
+          <a href="/img/AB.jpg">
+            <img src="img/AB.jpg" alt="Placeholder">
           <a href="/img/h1.jpg">
             <img src="img/h1.jpg" alt="Placeholder">
           </a>
