--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     
     <div id="portfolioGallery">
       <h2> photography<h2>
-          <a href="/img/Tstorm.jpg">
-            <img src="img/Tstorm.jpg" alt="Placeholder">
+          <a href="/img/Tstorm.JPG">
+            <img src="img/Tstorm.JPG" alt="Placeholder">
           <a href="/img/AB.jpg">
             <img src="img/AB.jpg" alt="Placeholder">
           <a href="/img/h1.jpg">
