--- a/index.html
+++ b/index.html
@@ -61,21 +61,21 @@
     <div id="portfolioGallery">
       <h2> photography<h2>
         <a href="/img/Tstorm.jpg">
-          <img src="img/Tstorm.jpg" alt="Placeholder">
+          <img src="/img/Tstorm.jpg" alt="Placeholder">
         </a>      
         <a href="/img/AB.jpg">
-          <img src="img/AB.jpg" alt="Placeholder">
+          <img src="/img/AB.jpg" alt="Placeholder">
         </a>     
         <a href="/img/h1.jpg">
-          <img src="img/h1.jpg" alt="Placeholder">
+          <img src="/img/h1.jpg" alt="Placeholder">
         </a>
         <a href="/img/moon.jpg">
-          <img src="img/moon.jpg" alt="Placeholder">
+          <img src="/img/moon.jpg" alt="Placeholder">
         <a href= "/img/lake.jpg">
-          <img src="img/lake.jpg" alt="Placeholder">
+          <img src="/img/lake.jpg" alt="Placeholder">
         </a>
         <a href= "/img/le.jpg">
-          <img src="img/le.jpg" alt="Placeholder">
+          <img src="/img/le.jpg" alt="Placeholder">
         </a>
           <h2>digital work</h2>
           <a href="/img/Michael Dolphins.png">
