--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <h1>Portfolio</h1>
     
     <div id="portfolioGallery">
-      <h2> photography<h2>
+      <h2> photography</h2>
         <a href="/img/Tstorm.jpg">
           <img src="/img/Tstorm.jpg" alt="Placeholder">
         </a>      
