--- a/index.html
+++ b/index.html
@@ -59,24 +59,23 @@
     <h1>Portfolio</h1>
     
     <div id="portfolioGallery">
-      <h2> photography</h2>
-        <a href="/img/Tstorm.jpg">
-          <img src="/img/Tstorm.jpg" alt="Placeholder">
-        </a>      
-        <a href="/img/AB.jpg">
-          <img src="/img/AB.jpg" alt="Placeholder">
-        </a>     
-        <a href="/img/h1.jpg">
-          <img src="/img/h1.jpg" alt="Placeholder">
-        </a>
-        <a href="/img/moon.jpg">
-          <img src="/img/moon.jpg" alt="Placeholder">
-        <a href= "/img/lake.jpg">
-          <img src="/img/lake.jpg" alt="Placeholder">
-        </a>
-        <a href= "/img/le.jpg">
-          <img src="/img/le.jpg" alt="Placeholder">
-        </a>
+      <h2> photography<h2>
+          <a href="/img/Tstorm.JPG">
+            <img src="img/Tstorm.JPG" alt="Placeholder">
+          <a href="/img/AB.jpg">
+            <img src="img/AB.jpg" alt="Placeholder">
+          <a href="/img/h1.jpg">
+            <img src="img/h1.jpg" alt="Placeholder">
+          </a>
+          <a href="/img/moon.jpg">
+            <img src="img/moon.jpg" alt="Placeholder">
+          </a>
+          <a href="/img/lake.jpg">
+            <img src="img/lake.jpg" alt="Placeholder">
+          </a>
+          <a href="/img/le.jpg">
+            <img src="img/le.jpg" alt="Placeholder">
+          </a>
           <h2>digital work</h2>
           <a href="/img/Michael Dolphins.png">
             <img src="/img/Michael Dolphins.png" alt="Michael Dolphins">
