--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
           <a href="/img/le.jpg">
             <img src="img/le.jpg" alt="Placeholder">
           </a>
+          <a href="/img/sb.jpg">
+            <img src="img/sb.jpg" alt="Placeholder">
+          </a>
+          <a href="/img/rm.jpg">
+            <img src="img/rm.jpg" alt="Placeholder">
+          </a>
           <h2>digital work</h2>
           <a href="/img/Michael Dolphins.png">
             <img src="/img/Michael Dolphins.png" alt="Michael Dolphins">
