--- a/index.html
+++ b/index.html
@@ -137,6 +137,10 @@
       <a href="/img/flyer1.jpg">
         <img src="img/flyer1.jpg" alt="Placeholder">
       </a>
+      <a href="/img/flyer_3-01.jpg">
+        <img src="img/flyer_3-01.jpg" alt="Placeholder">
+      </a>
+
       <h2> physical art</h2>
         <a href="/img/appFood.jpg">
         <img src="img/appFood.jpg" alt="Placeholder">
