--- a/404.html
+++ b/404.html
@@ -6,11 +6,7 @@
     <title>404</title>
   </head>
   <body>
-    <h1>You Seem to be a touch lost bud</h1>
-    <img
-      src="https://media.giphy.com/media/Ta3v3I4GI1gH7Rqek6/giphy.gif"
-      alt="404"
-    />
+    <img src="/img/jt404-01.jpg" alt="404" />
 
     <p><a href="/">Back to Website</a></p>
     <script src="/js/confetti.js"></script>
