--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <title>404</title>
   </head>
   <body>
-    <img src="/img/jt404-01.jpg" alt="404" />
+    <img src="/img/jt404-01-01.jpg" alt="404" />
 
     <p><a href="/">Back to Website</a></p>
     <script src="/js/confetti.js"></script>
